--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,146 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+/* src/index.css */
+/* @import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities"; */
 
-*{
-  padding:0;
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@1,9..40,500&family=Exo+2:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Allura&display=swap");
+
+* {
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: "Exo 2", sans-serif;
+}
+
+.typography {
+  font-family: "Allura", cursive;
+  font-size: 20px;
+}
+
+.wedge{
+  position:fixed;
+  right: 0px;
+  top:95px;
+  left: 0px;
+  display: flex;
+  align-items:center;
+  justify-content: center;
+}
+
+.hidden{
+  display:none;
+}
+
+.dropcontainer {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  height: 400px;
+  border: 5px dashed rgb(130, 184, 255);
+  width: 70%;
+}
+
+button {
+  width: 125px;
+  height: 40px;
+  font-size: medium;
+  background-color: rgb(130, 184, 255);
+  color: white;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+  height: 90px;
+  border-bottom: 2px solid rgb(95, 95, 95);
+  position: relative;
+  width: 100%;
+}
+
+.top {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 80%;
+}
+
+.fileNav {
+  width: 180px;
+  height: 100px;
+}
+
+.searchBar {
+  height: 40px;
+  width: 270px;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.left {
+  width: 20%;
+}
+
+.btnNav {
+  width: 100px;
+  font-size: 13px;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.middle {
+  padding: 35px 0;
+  width: 70%;
+}
+
+@media (max-width: 650px) {
+  .laterFix {
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    right: 50%;
+    height: 40px;
+  }
+  .middle {
+    padding-top: 65px;
+  }
+
+  .searchBar {
+    transform: translate(-50%);
+  }
+
+  li {
+    display: flex;
+  }
+
+  nav {
+    padding: 0;
+  }
+
+  .left {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .top {
+    width: 50%;
+  }
 }
