--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 @keyframes rotate {
   0% {
     transform: rotate(0deg);
@@ -14,7 +13,7 @@
   border: 4px solid #3498db;
   border-top: 4px solid white;
   border-radius: 50%;
-  animation: rotate 2s linear infinite; 
+  animation: rotate 2s linear infinite;
 }
 
 .container {
@@ -22,4 +21,27 @@
   justify-content: center;
   align-items: center;
   height: 80vh;
+}
+ul {
+  height: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+  width: inherit;
+  gap: 10px;
+}
+
+li {
+  height: 250px;
+  width: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: move;
+}
+
+li img {
+  height: inherit;
+  width: inherit;
 }
