--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 
 body {
   font-family: "Exo 2", sans-serif;
+  width: 100%;
 }
 
 .typography {
@@ -111,17 +112,15 @@ nav {
   width: 80%;
 }
 
-@media (max-width: 650px) {
-  .laterFix {
+ @media (max-width: 650px) {
+.laterFix {
     position: absolute;
     top:100px;
-    /* left: 50%;
-    right:50%; */
-    z-index: -20;
+ 
   }
 
   .searchBar {
-    /* transform: translate(-50%); */
+    transform: translate(35%);
     z-index: 10;
   }
 
@@ -143,4 +142,4 @@ nav {
   .top {
     width: 50%;
   }
-}
+} 
