--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,21 @@ li img {
   height: inherit;
   width: inherit;
 }
+
+.loginPage {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+form {
+  height: 450px;
+  width: 450px;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  gap: 9px;
+}
