--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-
-
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@1,9..40,500&family=Exo+2:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Allura&display=swap");
 
@@ -19,14 +17,24 @@ body {
   font-size: 20px;
 }
 
+.exit {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 20px;
+}
+
 .wedge {
   position: fixed;
-  right: 0px;
-  top: 95px;
-  left: 0px;
+  inset: 0;
+  height: 100vh;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 100;
+  overflow: hidden;
+  background-color: rgb(245, 245, 245, 0.9);
 }
 
 .hidden {
@@ -43,7 +51,8 @@ body {
   height: 400px;
   border: 5px dashed rgb(130, 184, 255);
   width: 70%;
-  background-color: rgb(245, 245, 245, 0.8);
+  background-color: rgb(245, 245, 245);
+  position: relative;
 }
 
 button {
@@ -108,15 +117,32 @@ nav {
   height: 100%;
 }
 
-ul{
+.laterFix{
+  position:relative;
+}
+
+.laterFix svg{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+ul {
   width: full;
 }
 
- @media (max-width: 650px) {
-.laterFix {
+@media (max-width: 650px) {
+  .laterFix {
     position: absolute;
-    top:100px;
- 
+    top: 100px;
+  }
+  .laterFix svg{
+    right: -80px;
+    top: 10px;
+  }
+
+  .middle {
+    width: 100%;
   }
 
   .searchBar {
@@ -142,4 +168,4 @@ ul{
   .top {
     width: 50%;
   }
-} 
+}
